# disaster-management

./: .env  .env.production  .vercelignore  API_DOCUMENTATION.md  DEPLOYMENT.md  PROJECT_COMPLETION.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  VERCEL_SETUP.md  app.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh  vercel.json  wsgi.py
api/: index.py
backend/: app.py  error_handlers.py  models.py
backend/routes/: __init__.py  admin.py  api.py  auth.py  citizen.py  volunteer.py
database/: disaster.db
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
tests/: smoke_test.py
