[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster-management-system"
version = "1.0.0"
description = "Real-time Disaster Management and Response System"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]

[tool.vercel]
builder = "@vercel/python"

[[tool.vercel.functions]]
path = "api/index.py"
